src/test/ui/feature-gates/feature-gate-is_sorted.stderr
error[E0658]: use of unstable library feature 'is_sorted': new API
  --> $DIR/feature-gate-is_sorted.rs:3:33
   |
LL |     assert!([1, 2, 2, 9].iter().is_sorted());
   |                                 ^^^^^^^^^
   |
   = note: see issue #53485 <https://github.com/rust-lang/rust/issues/53485> for more information
   = help: add `#![feature(is_sorted)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'is_sorted': new API
  --> $DIR/feature-gate-is_sorted.rs:7:26
   |
LL |     assert!([1, 2, 2, 9].is_sorted());
   |                          ^^^^^^^^^
   |
   = note: see issue #53485 <https://github.com/rust-lang/rust/issues/53485> for more information
   = help: add `#![feature(is_sorted)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'is_sorted': new API
  --> $DIR/feature-gate-is_sorted.rs:9:32
   |
LL |     assert!(![-2i32, -1, 0, 3].is_sorted_by_key(|n| n.abs()));
   |                                ^^^^^^^^^^^^^^^^
   |
   = note: see issue #53485 <https://github.com/rust-lang/rust/issues/53485> for more information
   = help: add `#![feature(is_sorted)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
